@@ -5,7 +5,7 @@
 # http://oss.codepoet.no/revelation/
 # $Id$
 #
-# Copyright (c) 2003-2004 Erik Grinaker
+# Copyright (c) 2003-2005 Erik Grinaker
 #
 # This program is free software; you can redistribute it and/or
 # modify it under the terms of the GNU General Public License
