@@ -13,6 +13,8 @@ Revelation changelog
 
 	* rewrote gpass datahandler, and wrote unit tests for it
 
+	* updated copyright period to include 2005
+
 
 2005-01-01  Erik Grinaker <erikg@codepoet.no>
 
